--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <header>
             <nav>
                 <ul id="nav-list"></ul>
+                <sl-button id="toggle-all" variant="text" size="medium">
+                    Открыть все
+                </sl-button>
             </nav>
         </header>
         <main id="main-content"></main>
