--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
         <main id="main-content"></main>
         <script type="module" src="node_modules/@shoelace-style/shoelace/dist/shoelace.js"></script>
         <script type="module" src="./src/script.js"></script>
-        <script type="module" src="./main.js"></script>
+<!--        <script type="module" src="./main.js"></script>-->
     </body>
 </html>
