--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Dynamic Sections</title>
+        <title>Notecode</title>
+        <link rel="icon" href="/favicon.ico" />
         <link rel="stylesheet" href="./src/style.css">
         <link href="node_modules/@shoelace-style/shoelace/dist/themes/light.css" rel="stylesheet">
     </head>
