мелкие изменения в коде

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <body>
         <header>
             <nav>
-                <ul id="nav-list"></ul>
+                <ul id="navList"></ul>
             </nav>
         </header>
-        <main id="main-content"></main>
+        <main id="mainContent"></main>
         <script type="module" src="node_modules/@shoelace-style/shoelace/dist/shoelace.js"></script>
         <script type="module" src="./src/script.js"></script>
         <script type="module" src="./main.js"></script>
