--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Codenote</title>
-        <link rel="icon" href="/favicon.ico" />
+        <link rel="icon" href="/testIco.ico" />
         <link rel="stylesheet" href="./src/style.css">
         <link href="node_modules/@shoelace-style/shoelace/dist/themes/light.css" rel="stylesheet">
     </head>
